# cas_project

./: .gitignore  CMakeLists.txt  README.md  autoconfig.sh  download_dataset  download_dataset.cpp  main.cpp  mid_term_report.md  occlusion_culling.hpp  read_obj  read_obj.cpp
.github/workflows/: ci.yml
culling/: CMakeLists.txt  cameraProperties.cpp  cameraProperties.hpp  occlusion_culling.hpp
dataset/Weisshai_Great_White_Shark/thumbnails/: 0.jpg:Zone.Identifier
tests/: CMakeLists.txt  test_math.cpp  test_read.cpp  unit_tests.cpp
utils/: CMakeLists.txt  mathUtils.cpp  mathUtils.hpp  read_obj.cpp  read_obj.hpp  visualize2d.cpp  visualize2d.hpp
